# rust-orderbook-lib

./: Cargo.toml  README.md  h
.github/: README.md
.github/workflows/: ci.yml
benches/: orderbook_bench.rs
benches/.github/: ci.yml
examples/: slippage_demo.rs
src/: LICENSE  lib.rs  order.rs  orderbook.rs  tests.rs
